--- a/prizma/accounts/trade-with-prizmafx.html
+++ b/prizma/accounts/trade-with-prizmafx.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login - PrizmaFX</title>
+  <title>Trade With - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -45,10 +45,10 @@
         </a>
         <ul class="header__user">
           <li>
-            <a class="button  button--small  button--blue" href="register.html">Open account</a>
+            <a class="button  button--small  button--blue" href="../client/register.html">Open account</a>
           </li>
           <li>
-            <a class="button  button--login">Log in</a>
+            <a class="button  button--login" href="../client/login.html">Log in</a>
           </li>
         </ul>
       </div>
@@ -57,10 +57,10 @@
           <li>
             <a class="nav__item">Accounts</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../accounts/trade-with-prizmafx.html">Trade with us</a></li>
-              <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
+              <li><a class="nav__subitem  nav__subitem--active">Trade with us</a></li>
+              <li><a class="nav__subitem" href="account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="../accounts/segregated-accounts.html">Segregated accounts</a></li>
-              <li><a class="nav__subitem" href="register.html">Open live account</a></li>
+              <li><a class="nav__subitem" href="../client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -89,39 +89,15 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>Login</h1>
-          <h2>Login</h2>
+          <h1>Trade with PrizmaFX</h1>
+          <h2>Trade with PrizmaFX</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--client">
+    <div class="inner__content  inner__content--accounts">
       <div class="container">
-        <div class="client">
-          <div class="client__info  client__info--login">
-            <b>Hello!</b>
-            <p>We are happy<br>to see you<br>again!</p>
-            <small>Trading involves risk of loss</small>
-          </div>
-          <div class="form__wrapper">
-            <form class="form  form--login" action="" method="post">
-              <h3>Sign in to prizmafx Client Area</h3>
-              <label class="form__label  form__label--login">
-                Your email
-                <input class="form__input  form__input--small  form__input--login" type="email" name="Email" required>
-              </label>
-              <label class="form__label  form__label--password  form__label--login">
-                Password
-                <input class="form__input  form__input--small  form__input--password  form__input--login" type="password" name="Password" required>
-                <button class="form__switch  form__switch--close" type="button"></button>
-              </label>
-              <div class="form__flex  form__flex--login">
-                <a class="form__links" href="#">Forgot password?</a>
-                <a class="form__links" href="register.html">Register</a>
-              </div>
-              <button class="form__submit  form__submit--login" type="submit" name="Submit">Login</button>
-            </form>
-          </div>
-        </div>
+        <p class="inner__subtext">MultiplyMarket presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
+        <a class="button  button--blue  inner__button" href="../client/register.html">Open account</a>
       </div>
     </div>
   </section>
