--- a/prizma/platforms/metatrader.html
+++ b/prizma/platforms/metatrader.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login - PrizmaFX</title>
+  <title>MetaTrader - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -45,10 +45,10 @@
         </a>
         <ul class="header__user">
           <li>
-            <a class="button  button--small  button--blue" href="register.html">Open account</a>
+            <a class="button  button--small  button--blue" href="../client/register.html">Open account</a>
           </li>
           <li>
-            <a class="button  button--login">Log in</a>
+            <a class="button  button--login" href="../client/login.html">Log in</a>
           </li>
         </ul>
       </div>
@@ -60,15 +60,15 @@
               <li><a class="nav__subitem" href="../accounts/trade-with-prizmafx.html">Trade with us</a></li>
               <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="../accounts/segregated-accounts.html">Segregated accounts</a></li>
-              <li><a class="nav__subitem" href="register.html">Open live account</a></li>
+              <li><a class="nav__subitem" href="../client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
-              <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
-              <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
+              <li><a class="nav__subitem  nav__subitem--active">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="webtrader.html">WebTrader</a></li>
+              <li><a class="nav__subitem" href="mobile.html">Trade Mobile</a></li>
             </ul>
           </li>
           <li>
@@ -89,38 +89,28 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>Login</h1>
-          <h2>Login</h2>
+          <h1>MetaTrader</h1>
+          <h2>MetaTrader</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--client">
+    <div class="inner__content  inner__content--platforms">
       <div class="container">
-        <div class="client">
-          <div class="client__info  client__info--login">
-            <b>Hello!</b>
-            <p>We are happy<br>to see you<br>again!</p>
-            <small>Trading involves risk of loss</small>
-          </div>
-          <div class="form__wrapper">
-            <form class="form  form--login" action="" method="post">
-              <h3>Sign in to prizmafx Client Area</h3>
-              <label class="form__label  form__label--login">
-                Your email
-                <input class="form__input  form__input--small  form__input--login" type="email" name="Email" required>
-              </label>
-              <label class="form__label  form__label--password  form__label--login">
-                Password
-                <input class="form__input  form__input--small  form__input--password  form__input--login" type="password" name="Password" required>
-                <button class="form__switch  form__switch--close" type="button"></button>
-              </label>
-              <div class="form__flex  form__flex--login">
-                <a class="form__links" href="#">Forgot password?</a>
-                <a class="form__links" href="register.html">Register</a>
-              </div>
-              <button class="form__submit  form__submit--login" type="submit" name="Submit">Login</button>
-            </form>
-          </div>
+        <p class="inner__subtext">The MultiplyMarket Meta Trader Four provides the optimal platform for making the most out of Forex trading</p>
+        <p class="inner__text">MT4 is a globally acclaimed software made specifically for the purpose of delivering the best Forex experience, along with Commodities, Futures and different tradeable assets. It is perfect for new traders, as well as seasoned veterans, because it covers all aspects of the trading process. Due to its reliability, easiness of use, timely access to vital information and trading strategies, along with the latest economic data and occurrences, MT4 is considered to be the leading platform worldwideе.</p>
+        <b class="inner__name  inner__name--big">Meta Trader Four gives you the opportunity to:</b>
+        <div class="inner__flex">
+          <ul class="inner__list">
+            <li>Invest in a wide variety of Currencies, Commodities and Futures</li>
+            <li>Make analysis of securities quotes</li>
+            <li>Create a trading strategy</li>
+            <li>Use your mobile phone to trade, no matter where you are</li>
+            <li>Look at many charts at the same time</li>
+            <li>Make customizations to the screens</li>
+            <li>Get support for many currencies</li>
+            <li>Choose from a wide number of support languages</li>
+          </ul>
+          <a class="button  button--blue" href="#">Download</a>
         </div>
       </div>
     </div>
@@ -144,7 +134,7 @@
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a>Account Types</a></li>
+          <li><a href="account-types.html">Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
