--- a/prizma/tools/account-funding.html
+++ b/prizma/tools/account-funding.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login - PrizmaFX</title>
+  <title>Account Funding - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -45,10 +45,10 @@
         </a>
         <ul class="header__user">
           <li>
-            <a class="button  button--small  button--blue" href="register.html">Open account</a>
+            <a class="button  button--small  button--blue" href="../client/register.html">Open account</a>
           </li>
           <li>
-            <a class="button  button--login">Log in</a>
+            <a class="button  button--login" href="../client/login.html">Log in</a>
           </li>
         </ul>
       </div>
@@ -60,7 +60,7 @@
               <li><a class="nav__subitem" href="../accounts/trade-with-prizmafx.html">Trade with us</a></li>
               <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="../accounts/segregated-accounts.html">Segregated accounts</a></li>
-              <li><a class="nav__subitem" href="register.html">Open live account</a></li>
+              <li><a class="nav__subitem" href="../client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -74,11 +74,11 @@
           <li>
             <a class="nav__item">Tools</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../tools/spread-and-trading-hours.html">Spread and trading</a></li>
-              <li><a class="nav__subitem" href="../tools/glossary.html">Glossary</a></li>
-              <li><a class="nav__subitem" href="../tools/forex-signals.html">Forex Signals</a></li>
-              <li><a class="nav__subitem" href="../tools/account-faq.html">Account FAQ</a></li>
-              <li><a class="nav__subitem" href="../tools/account-funding.html">Account funding</a></li>
+              <li><a class="nav__subitem" href="spread-and-trading-hours.html">Spread and trading</a></li>
+              <li><a class="nav__subitem" href="glossary.html">Glossary</a></li>
+              <li><a class="nav__subitem" href="forex-signals.html">Forex Signals</a></li>
+              <li><a class="nav__subitem" href="account-faq.html">Account FAQ</a></li>
+              <li><a class="nav__subitem  nav__subitem--active">Account Funding</a></li>
             </ul>
           </li>
         </ul>
@@ -89,39 +89,37 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>Login</h1>
-          <h2>Login</h2>
+          <h1>Account Funding</h1>
+          <h2>Account Funding</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--client">
+    <div class="inner__content  inner__content--tools">
       <div class="container">
-        <div class="client">
-          <div class="client__info  client__info--login">
-            <b>Hello!</b>
-            <p>We are happy<br>to see you<br>again!</p>
-            <small>Trading involves risk of loss</small>
-          </div>
-          <div class="form__wrapper">
-            <form class="form  form--login" action="" method="post">
-              <h3>Sign in to prizmafx Client Area</h3>
-              <label class="form__label  form__label--login">
-                Your email
-                <input class="form__input  form__input--small  form__input--login" type="email" name="Email" required>
-              </label>
-              <label class="form__label  form__label--password  form__label--login">
-                Password
-                <input class="form__input  form__input--small  form__input--password  form__input--login" type="password" name="Password" required>
-                <button class="form__switch  form__switch--close" type="button"></button>
-              </label>
-              <div class="form__flex  form__flex--login">
-                <a class="form__links" href="#">Forgot password?</a>
-                <a class="form__links" href="register.html">Register</a>
-              </div>
-              <button class="form__submit  form__submit--login" type="submit" name="Submit">Login</button>
-            </form>
-          </div>
-        </div>
+        <p class="inner__text">You can put money on your MultiplyMarket account in 3 different ways, according to your preferences. Log in to your MultiplyMarket account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
+        <b class="inner__name  inner__name--big">1. Using a Credit Card</b>
+        <p class="inner__text">The quickest method available. It lets you put money on your profile momentarily. Making a deposit with a credit card is super easy as well, you just need to choose it as your desired method and then fill in the necessary information. Note that you need to have an international credit card in order for the payment to be accepted.</p>
+        <p class="inner__text">The smallest deposit amount is $250, whereas the deposit ceiling is $5,000. The withdrawal limitations are the same.</p>
+        <b class="inner__name  inner__name--big">2. Bank Draft</b>
+        <p class="inner__text">Sometimes the transaction might take up to 5 days to get processed, so please have that in mind when using a bank draft.</p>
+        <b class="inner__name  inner__name--big">3. Wire Transfer</b>
+        <p class="inner__text">In order to use a wire transfer to put money on your account, you need to fill in the necessary documents at the bank. Know that there is a minimum allowed amount of $10000 only, so you need to consider if this is the right deposit option for you.</p>
+        <p class="inner__text">It is possible that the process takes about 5 work days before the payment is completed. As soon as the money is on your profile, you will receive an e-mail notification.</p>
+        <b class="inner__name  inner__name--big">Withdrawing money from the account</b>
+        <p class="inner__text">Withdrawing money from your MultiplyMarket profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
+        <p class="inner__text">The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn by any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
+        <b class="inner__name  inner__name--big">In order to make a withdrawal you need to:</b>
+        <ul class="inner__list">
+          <li>Log in to your account in our client area and submit a withdrawal request online.</li>
+          <li>We will take care of your withdrawal as soon as we get the request. After that we are going to send the money to the account which you made the deposit from. Varying on where your bank is situated, the transaction can take about 5 days to be fully processed and completed. Usually though, it takes less.</li>
+        </ul>
+        <b class="inner__name  inner__name--big">Things you should take into account:</b>
+        <ul class="inner__list">
+          <li>MultiplyMarket takes care of transferring the deposit money.</li>
+          <li>The money you’ve earned from trading will be sent to the account that you`ve specified.</li>
+          <li>In some cases, a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
+        </ul>
+        <p class="inner__text">In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a MultiplyMarket employee.</p>
       </div>
     </div>
   </section>
@@ -144,7 +142,7 @@
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a>Account Types</a></li>
+          <li><a href="account-types.html">Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
