--- a/prizma/accounts/segregated-accounts.html
+++ b/prizma/accounts/segregated-accounts.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login - PrizmaFX</title>
+  <title>Segregated Accounts - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -45,10 +45,10 @@
         </a>
         <ul class="header__user">
           <li>
-            <a class="button  button--small  button--blue" href="register.html">Open account</a>
+            <a class="button  button--small  button--blue" href="../client/register.html">Open account</a>
           </li>
           <li>
-            <a class="button  button--login">Log in</a>
+            <a class="button  button--login" href="../client/login.html">Log in</a>
           </li>
         </ul>
       </div>
@@ -57,10 +57,10 @@
           <li>
             <a class="nav__item">Accounts</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../accounts/trade-with-prizmafx.html">Trade with us</a></li>
-              <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
-              <li><a class="nav__subitem" href="../accounts/segregated-accounts.html">Segregated accounts</a></li>
-              <li><a class="nav__subitem" href="register.html">Open live account</a></li>
+              <li><a class="nav__subitem" href="trade-with-prizmafx.html">Trade with us</a></li>
+              <li><a class="nav__subitem" href="account-types.html">Account types</a></li>
+              <li><a class="nav__subitem  nav__subitem--active">Segregated accounts</a></li>
+              <li><a class="nav__subitem" href="../client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -89,39 +89,32 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>Login</h1>
-          <h2>Login</h2>
+          <h1>Segregated Accounts</h1>
+          <h2>Segregated Accounts</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--client">
+    <div class="inner__content  inner__content--accounts">
       <div class="container">
-        <div class="client">
-          <div class="client__info  client__info--login">
-            <b>Hello!</b>
-            <p>We are happy<br>to see you<br>again!</p>
-            <small>Trading involves risk of loss</small>
-          </div>
-          <div class="form__wrapper">
-            <form class="form  form--login" action="" method="post">
-              <h3>Sign in to prizmafx Client Area</h3>
-              <label class="form__label  form__label--login">
-                Your email
-                <input class="form__input  form__input--small  form__input--login" type="email" name="Email" required>
-              </label>
-              <label class="form__label  form__label--password  form__label--login">
-                Password
-                <input class="form__input  form__input--small  form__input--password  form__input--login" type="password" name="Password" required>
-                <button class="form__switch  form__switch--close" type="button"></button>
-              </label>
-              <div class="form__flex  form__flex--login">
-                <a class="form__links" href="#">Forgot password?</a>
-                <a class="form__links" href="register.html">Register</a>
-              </div>
-              <button class="form__submit  form__submit--login" type="submit" name="Submit">Login</button>
-            </form>
-          </div>
-        </div>
+        <p class="inner__subtext">The unique MultiplyMarket Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors.</p>
+        <b class="inner__name  inner__name--big">Advantages:</b>
+        <p class="inner__text">There are few more additional benefits that are shaped exactly to satisfy customers common needs. With all that major pluses, you can be sure in:</p>
+        <ul class="inner__list">
+          <li>100 % customers satisfaction</li>
+          <li>24/7 users support and help in dealing the most common problem issues</li>
+          <li>Effectiveness of your capital</li>
+          <li>Reliable chargeback security</li>
+          <li>Convenient and user-friendly functions of your funds</li>
+        </ul>
+        <b class="inner__name  inner__name--big">When will a Loyalty Saver Account be appropriated for me?</b>
+        <p class="inner__text">It will be assigned for you in the very beginning, once you have deposited money into your account, and you will be able to speed up your trading process avoiding any needless job and paperwork.</p>
+        <b class="inner__name  inner__name--big">Conditions for withdrawing and transmitting money</b>
+        <ul class="inner__list">
+          <li>Verification of both parties are needed to confirm the release</li>
+          <li>Can be done only when both parties are satisfied with provided deal</li>
+          <li>May be automatically settled for a money withdraw Performed on user’s requests of transmitting</li>
+        </ul>
+        <a class="button  button--blue  inner__button" href="../client/register.html">Open account</a>
       </div>
     </div>
   </section>
