--- a/prizma/tools/account-faq.html
+++ b/prizma/tools/account-faq.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login - PrizmaFX</title>
+  <title>Account FAQ - PrizmaFX</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -45,10 +45,10 @@
         </a>
         <ul class="header__user">
           <li>
-            <a class="button  button--small  button--blue" href="register.html">Open account</a>
+            <a class="button  button--small  button--blue" href="../client/register.html">Open account</a>
           </li>
           <li>
-            <a class="button  button--login">Log in</a>
+            <a class="button  button--login" href="../client/login.html">Log in</a>
           </li>
         </ul>
       </div>
@@ -60,7 +60,7 @@
               <li><a class="nav__subitem" href="../accounts/trade-with-prizmafx.html">Trade with us</a></li>
               <li><a class="nav__subitem" href="../accounts/account-types.html">Account types</a></li>
               <li><a class="nav__subitem" href="../accounts/segregated-accounts.html">Segregated accounts</a></li>
-              <li><a class="nav__subitem" href="register.html">Open live account</a></li>
+              <li><a class="nav__subitem" href="../client/register.html">Open live account</a></li>
             </ul>
           </li>
           <li>
@@ -74,10 +74,10 @@
           <li>
             <a class="nav__item">Tools</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../tools/spread-and-trading-hours.html">Spread and trading</a></li>
-              <li><a class="nav__subitem" href="../tools/glossary.html">Glossary</a></li>
-              <li><a class="nav__subitem" href="../tools/forex-signals.html">Forex Signals</a></li>
-              <li><a class="nav__subitem" href="../tools/account-faq.html">Account FAQ</a></li>
+              <li><a class="nav__subitem" href="spread-and-trading-hours.html">Spread and trading</a></li>
+              <li><a class="nav__subitem" href="glossary.html">Glossary</a></li>
+              <li><a class="nav__subitem" href="forex-signals.html">Forex Signals</a></li>
+              <li><a class="nav__subitem  nav__subitem--active">Account FAQ</a></li>
               <li><a class="nav__subitem" href="../tools/account-funding.html">Account funding</a></li>
             </ul>
           </li>
@@ -89,39 +89,32 @@
     <header class="inner__header">
       <div class="container">
         <div class="inner__title">
-          <h1>Login</h1>
-          <h2>Login</h2>
+          <h1>Account FAQ</h1>
+          <h2>Account FAQ</h2>
         </div>
       </div>
     </header>
-    <div class="inner__content  inner__content--client">
+    <div class="inner__content  inner__content--tools">
       <div class="container">
-        <div class="client">
-          <div class="client__info  client__info--login">
-            <b>Hello!</b>
-            <p>We are happy<br>to see you<br>again!</p>
-            <small>Trading involves risk of loss</small>
-          </div>
-          <div class="form__wrapper">
-            <form class="form  form--login" action="" method="post">
-              <h3>Sign in to prizmafx Client Area</h3>
-              <label class="form__label  form__label--login">
-                Your email
-                <input class="form__input  form__input--small  form__input--login" type="email" name="Email" required>
-              </label>
-              <label class="form__label  form__label--password  form__label--login">
-                Password
-                <input class="form__input  form__input--small  form__input--password  form__input--login" type="password" name="Password" required>
-                <button class="form__switch  form__switch--close" type="button"></button>
-              </label>
-              <div class="form__flex  form__flex--login">
-                <a class="form__links" href="#">Forgot password?</a>
-                <a class="form__links" href="register.html">Register</a>
-              </div>
-              <button class="form__submit  form__submit--login" type="submit" name="Submit">Login</button>
-            </form>
-          </div>
-        </div>
+        <b class="inner__name  inner__name--big">How to open a MultiplyMarket trade account?</b>
+        <p class="inner__text">It is easy and secure to open a MultiplyMarket account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
+        <p class="inner__text">You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
+        <b class="inner__name  inner__name--big">Which types of accounts are available?</b>
+        <p class="inner__text">Three kinds of accounts are offered by MultiplyMarket:</p>
+        <p class="inner__text"><b>Mini Account</b> - beginning at $500 USD.</p>
+        <p class="inner__text"><b>Classic Account</b> - beginning at $5000 USD.</p>
+        <p class="inner__text"><b>Premium Account</b> - beginning at $20000 USD.</p>
+        <b class="inner__name  inner__name--big">Which platform should you use?</b>
+        <p class="inner__text">There are a variety of different platforms available from MultiplyMarket to meet the requirements of different traders with different circumstances.</p>
+        <p class="inner__text">MultiplyMarket MetaTrader 4 - Download this popular, world-renowned Forex desktop platform if you predominately trade in foreign currencies. It is both user-friendly and state-of-the-art.</p>
+        <p class="inner__text">MultiplyMarket Mobile - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade from anywhere in the world, from a variety of devices.</p>
+        <b class="inner__name  inner__name--big">What type of information do you need to give in order to trade?</b>
+        <p class="inner__text">You are requested to give the following information for proof of identity upon registration:</p>
+        <p class="inner__text">A certified, original copy of your passport or ID.</p>
+        <p class="inner__text">A utility bill with proof of your mailing address.</p>
+        <p class="inner__text">You will need to clearly indicate the beneficiary name on the MultiplyMarket Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
+        <b class="inner__name  inner__name--big">How do you manage your risk?</b>
+        <p class="inner__text">The stop-loss order and the limit order are the most common risk management tools in Forex trading. A limit order sets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
       </div>
     </div>
   </section>
@@ -144,7 +137,7 @@
         <ul class="footer__links">
           <li><a href="#">Licenses</a></li>
           <li>|</li>
-          <li><a>Account Types</a></li>
+          <li><a href="account-types.html">Account Types</a></li>
           <li>|</li>
           <li><a href="#">Funding & Withdrawal</a></li>
           <li>|</li>
