finish inner page

--- a/prizma/accounts/segregated-accounts.html
+++ b/prizma/accounts/segregated-accounts.html
@@ -66,7 +66,7 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
@@ -96,7 +96,7 @@
     </header>
     <div class="inner__content  inner__content--accounts">
       <div class="container">
-        <p class="inner__subtext">The unique MultiplyMarket Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors.</p>
+        <p class="inner__subtext">The unique PrizmaFX Loyalty Saver Account allows their users to conduct trades perfectly safe and keeps them out of slow transaction loadings or information and payments errors.</p>
         <b class="inner__name  inner__name--big">Advantages:</b>
         <p class="inner__text">There are few more additional benefits that are shaped exactly to satisfy customers common needs. With all that major pluses, you can be sure in:</p>
         <ul class="inner__list">
