--- a/prizma/accounts/trade-with-prizmafx.html
+++ b/prizma/accounts/trade-with-prizmafx.html
@@ -66,7 +66,7 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
@@ -96,7 +96,7 @@
     </header>
     <div class="inner__content  inner__content--accounts">
       <div class="container">
-        <p class="inner__subtext">MultiplyMarket presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
+        <p class="inner__subtext">PrizmaFX presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a class="button  button--blue  inner__button" href="../client/register.html">Open account</a>
       </div>
     </div>
