--- a/prizma/tools/account-faq.html
+++ b/prizma/tools/account-faq.html
@@ -66,7 +66,7 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
@@ -96,23 +96,23 @@
     </header>
     <div class="inner__content  inner__content--tools">
       <div class="container">
-        <b class="inner__name  inner__name--big">How to open a MultiplyMarket trade account?</b>
-        <p class="inner__text">It is easy and secure to open a MultiplyMarket account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
+        <b class="inner__name  inner__name--big">How to open a PrizmaFX trade account?</b>
+        <p class="inner__text">It is easy and secure to open a PrizmaFX account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
         <p class="inner__text">You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
         <b class="inner__name  inner__name--big">Which types of accounts are available?</b>
-        <p class="inner__text">Three kinds of accounts are offered by MultiplyMarket:</p>
+        <p class="inner__text">Three kinds of accounts are offered by PrizmaFX:</p>
         <p class="inner__text"><b>Mini Account</b> - beginning at $500 USD.</p>
         <p class="inner__text"><b>Classic Account</b> - beginning at $5000 USD.</p>
         <p class="inner__text"><b>Premium Account</b> - beginning at $20000 USD.</p>
         <b class="inner__name  inner__name--big">Which platform should you use?</b>
-        <p class="inner__text">There are a variety of different platforms available from MultiplyMarket to meet the requirements of different traders with different circumstances.</p>
-        <p class="inner__text">MultiplyMarket MetaTrader 4 - Download this popular, world-renowned Forex desktop platform if you predominately trade in foreign currencies. It is both user-friendly and state-of-the-art.</p>
-        <p class="inner__text">MultiplyMarket Mobile - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade from anywhere in the world, from a variety of devices.</p>
+        <p class="inner__text">There are a variety of different platforms available from PrizmaFX to meet the requirements of different traders with different circumstances.</p>
+        <p class="inner__text">PrizmaFX MetaTrader 4 - Download this popular, world-renowned Forex desktop platform if you predominately trade in foreign currencies. It is both user-friendly and state-of-the-art.</p>
+        <p class="inner__text">PrizmaFX Mobile - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade from anywhere in the world, from a variety of devices.</p>
         <b class="inner__name  inner__name--big">What type of information do you need to give in order to trade?</b>
         <p class="inner__text">You are requested to give the following information for proof of identity upon registration:</p>
         <p class="inner__text">A certified, original copy of your passport or ID.</p>
         <p class="inner__text">A utility bill with proof of your mailing address.</p>
-        <p class="inner__text">You will need to clearly indicate the beneficiary name on the MultiplyMarket Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
+        <p class="inner__text">You will need to clearly indicate the beneficiary name on the PrizmaFX Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
         <b class="inner__name  inner__name--big">How do you manage your risk?</b>
         <p class="inner__text">The stop-loss order and the limit order are the most common risk management tools in Forex trading. A limit order sets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
       </div>
