--- a/prizma/tools/forex-signals.html
+++ b/prizma/tools/forex-signals.html
@@ -66,7 +66,7 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
@@ -96,7 +96,7 @@
     </header>
     <div class="inner__content  inner__content--tools">
       <div class="container">
-        <p class="inner__subtext">At MultiplyMarket we provide the best forex signals by working closely with technology providers who are at the forefront of the industry. To get a different perspective on Commodities, Indices, Currency Pairs, and Stocks, you can change the Time Frame.</p>
+        <p class="inner__subtext">At PrizmaFX we provide the best forex signals by working closely with technology providers who are at the forefront of the industry. To get a different perspective on Commodities, Indices, Currency Pairs, and Stocks, you can change the Time Frame.</p>
         <a class="button  button--blue  inner__button" href="http://www.mlc-forex-news.com/" target="_blank">Hot signals</a>
       </div>
     </div>
