--- a/prizma/tools/spread-and-trading-hours.html
+++ b/prizma/tools/spread-and-trading-hours.html
@@ -66,7 +66,7 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
@@ -96,9 +96,9 @@
     </header>
     <div class="inner__content  inner__content--tools">
       <div class="container">
-        <p class="inner__subtext">Dealing with MultiplyMarket, you’ll obtain a fixed range of spreads for a wide specter of currency pairs, available 24/7. Free of strict margin boundaries, it empowers you to trade using more profitable conditions</p>
+        <p class="inner__subtext">Dealing with PrizmaFX, you’ll obtain a fixed range of spreads for a wide specter of currency pairs, available 24/7. Free of strict margin boundaries, it empowers you to trade using more profitable conditions</p>
         <b class="inner__name  inner__name--big">Margin requirements</b>
-        <p class="inner__text">Relying on a type of selected trading account, MultiplyMarket provides its trades with flexible forex leverage, extended from 1:1 to 1:200.</p>
+        <p class="inner__text">Relying on a type of selected trading account, PrizmaFX provides its trades with flexible forex leverage, extended from 1:1 to 1:200.</p>
         <p class="inner__text">You possess no margin requirements all nights long and during weekends.</p>
         <p class="inner__text">MINIMAL trade SIZE</p>
         <p class="inner__text">The minimal trade size settled for all financial tools is 0.01 for a standard lot. This enables customers to trade with a high degree of safety.</p>
