--- a/prizma/platforms/mobile.html
+++ b/prizma/platforms/mobile.html
@@ -66,7 +66,7 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem  nav__subitem--active">Trade Mobile</a></li>
             </ul>
@@ -97,7 +97,7 @@
     <div class="inner__content  inner__content--platforms">
       <div class="container">
         <p class="inner__subtext">Trading Mobile Application: The independence to trade at any time and place</p>
-        <p class="inner__text">Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android MultiplyMarket`s mobile software gives you the opportunity to invest, operate your profile and check Special MultiplyMarket’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
+        <p class="inner__text">Don’t lag – begin making trades from your device, no matter if it’s phone or tablet, Apple or Android PrizmaFX`s mobile software gives you the opportunity to invest, operate your profile and check Special PrizmaFX’s mobile software affords you with abilities to invest, to operate personal profile and to check the newest financial tendencies with no strict attachment to time and place where you are, and without a fee. The possible potential of that software is to please every trader, whether a beginner or an advanced patron. Keywords inside of that are intuitive plain.</p>
         <p class="inner__text">As we have mentioned before, this software is suitable for almost all devices, whether it’s Apple or Android products.Stay informed regarding newest market processes, and act deliberately keeping to it. Place deals freely strict from your mobile.</p>
         <p class="inner__text">Invest your capital in a broad assortment of instruments and come in the global markets. Combined chartings among with symbols, together with technological statistics and the newest financial tendencies could assist you in the decision to open or close agreed position. Besides of that, platform affords an absolutely safeness and privacy of its mobile software for your use.</p>
         <p class="inner__text">Use your mobile device to invest in a variety of financial instruments – Forex, Futures and Commodities.</p>
