--- a/prizma/tools/account-funding.html
+++ b/prizma/tools/account-funding.html
@@ -66,7 +66,7 @@
           <li>
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
-              <li><a class="nav__subitem" href="../platfroms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
+              <li><a class="nav__subitem" href="../platforms/metatrader.html">PrizmaFX MetaTrader 4</a></li>
               <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="../platforms/mobile.html">Trade Mobile</a></li>
             </ul>
@@ -96,7 +96,7 @@
     </header>
     <div class="inner__content  inner__content--tools">
       <div class="container">
-        <p class="inner__text">You can put money on your MultiplyMarket account in 3 different ways, according to your preferences. Log in to your MultiplyMarket account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
+        <p class="inner__text">You can put money on your PrizmaFX account in 3 different ways, according to your preferences. Log in to your PrizmaFX account and go to the button for depositing. Notice that there are 3 available methods for doing so:</p>
         <b class="inner__name  inner__name--big">1. Using a Credit Card</b>
         <p class="inner__text">The quickest method available. It lets you put money on your profile momentarily. Making a deposit with a credit card is super easy as well, you just need to choose it as your desired method and then fill in the necessary information. Note that you need to have an international credit card in order for the payment to be accepted.</p>
         <p class="inner__text">The smallest deposit amount is $250, whereas the deposit ceiling is $5,000. The withdrawal limitations are the same.</p>
@@ -106,7 +106,7 @@
         <p class="inner__text">In order to use a wire transfer to put money on your account, you need to fill in the necessary documents at the bank. Know that there is a minimum allowed amount of $10000 only, so you need to consider if this is the right deposit option for you.</p>
         <p class="inner__text">It is possible that the process takes about 5 work days before the payment is completed. As soon as the money is on your profile, you will receive an e-mail notification.</p>
         <b class="inner__name  inner__name--big">Withdrawing money from the account</b>
-        <p class="inner__text">Withdrawing money from your MultiplyMarket profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
+        <p class="inner__text">Withdrawing money from your PrizmaFX profile is very easy to do and takes no time at all. We are always 100% committed to doing what`s best for our users.</p>
         <p class="inner__text">The money can also be withdrawn with a regular bank transferal. You can request the funds to be withdrawn by any method you find most comfortable. Note that it will be returned to the same account you made the deposit from.</p>
         <b class="inner__name  inner__name--big">In order to make a withdrawal you need to:</b>
         <ul class="inner__list">
@@ -115,11 +115,11 @@
         </ul>
         <b class="inner__name  inner__name--big">Things you should take into account:</b>
         <ul class="inner__list">
-          <li>MultiplyMarket takes care of transferring the deposit money.</li>
+          <li>PrizmaFX takes care of transferring the deposit money.</li>
           <li>The money you’ve earned from trading will be sent to the account that you`ve specified.</li>
           <li>In some cases, a back-charge might be imposed and deducted from the money that is being withdrawn.</li>
         </ul>
-        <p class="inner__text">In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a MultiplyMarket employee.</p>
+        <p class="inner__text">In case you would like to ask anything related to putting money on the Live Account, feel free to get in touch with a PrizmaFX employee.</p>
       </div>
     </div>
   </section>
