--- a/bb/index.html
+++ b/bb/index.html
@@ -226,6 +226,10 @@
       </form>
     </div>
   </div>
+  <!-- Skype -->
+  <span class="skype-button bubble" data-contact-id="live:backoffice.kiev.ua"></span>
+  <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
+  
   <script src="js/popup.js"></script>
   <script src="js/tabs.js"></script>
 </body>
