--- a/bb/index.html
+++ b/bb/index.html
@@ -211,6 +211,7 @@
         </div>
       </div>
     </div>
+    <a class="footer__skype" href="skype:live:backoffice.kiev.ua?chat"></a>
   </footer>
   <div class="popup__overlay  popup__overlay--hide">
     <div class="popup  popup--hide">
@@ -227,8 +228,8 @@
     </div>
   </div>
   <!-- Skype -->
-  <span class="skype-button bubble" data-contact-id="live:backoffice.kiev.ua"></span>
-  <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
+  <!-- <span class="skype-button bubble" data-contact-id="live:backoffice.kiev.ua"></span> -->
+  <!-- <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script> -->
   
   <script src="js/popup.js"></script>
   <script src="js/tabs.js"></script>
