--- a/mm/index.html
+++ b/mm/index.html
@@ -35,7 +35,7 @@
                       <li><a href="templates/about-us.html">Trade with<br>MultiplyMarket</a></li>
                       <li><a href="templates/account-types.html">Account types</a></li>
                       <li><a href="templates/segregated.html">Segregated account</a></li>
-                      <li><a href="https://client.multiplymarket.com/en/members/register/real">Open live account</a></li>
+                      <li><a href="https://clients.multiplymarket.com/register">Open live account</a></li>
                   </ul>
                 </li>
                 <li>
@@ -58,8 +58,8 @@
                 </li>
             </ul>
             <div class="main-nav__user">
-              <a class="button" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-              <a class="button  button--blue" href="https://client.multiplymarket.com/en/members/login">Log In</a>
+              <a class="button" href="https://clients.multiplymarket.com/register">Open live account</a>
+              <a class="button  button--blue" href="https://clients.multiplymarket.com/">Log In</a>
               <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
             </div>
           </nav>
@@ -67,7 +67,7 @@
         <div class="title  title--down">
           <h1>MultiplyMarket</h1>
           <p>Innovative power tools<br>that align with your goals</p>
-          <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+          <a class="button  button--title" href="https://clients.multiplymarket.com/register">Open live account</a>
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@
       <div class="slider__box  slider__box--1">
         <div class="container">
           <p>Super fast speed in the execution<br>of orders, with millions of orders<br>performed so far</p>
-          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a><br>
+          <a class="button  button--slider" href="https://clients.multiplymarket.com/register">Open live account</a><br>
           <a class="button  button--tv" href="https://get.teamviewer.com/vcpgxbt">For live assistance <span>click here</span></a>
           <img src="img/tv-name.svg" width="130" alt="TeamViewer">
         </div>
@@ -120,13 +120,13 @@
         <div class="container">
           <b>Take on the market with<br>our innovative powerful<br>platforms</b>
           <p>Trade on the go with our unique mobile platform</p>
-          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+          <a class="button  button--slider" href="https://clients.multiplymarket.com/register">Open live account</a>
         </div>
       </div>
       <div class="slider__box  slider__box--3">
         <div class="container">
           <b>Embrace every opportunity to trade –<br>fast and reliable trade executions<br>with transparent pricing</b>
-          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a><br>
+          <a class="button  button--slider" href="https://clients.multiplymarket.com/register">Open live account</a><br>
           <a class="button  button--tv" href="https://get.teamviewer.com/vcpgxbt">For live assistance <span>click here</span></a>
           <img src="img/tv-name.svg" width="130" alt="TeamViewer">
         </div>
@@ -147,7 +147,7 @@
         <div class="trade__left">
           <h1>Trade now</h1>
           <p>Trade Shares, Indices, Forex, Commodities and Cryptocurrencies with CFDs</p>
-          <a class="button  button--green" href="https://client.multiplymarket.com/en/members/register/real">Sign up for free</a>
+          <a class="button  button--green" href="https://clients.multiplymarket.com/register">Sign up for free</a>
           <small>TradingCFDs involves risk of loss</small>
         </div>
         <div class="trade__right">
@@ -216,7 +216,7 @@
           <p>Trade and Choose from Numerous Instruments Available on MultiplyMarket</p>
         </div>
       </div>
-      <a class="button  button--green" href="https://client.multiplymarket.com/en/members/register/real">Get Started</a>
+      <a class="button  button--green" href="https://clients.multiplymarket.com/register">Get Started</a>
     </div>
   </section>
   <section class="map">
@@ -242,8 +242,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
-          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
+          <li><a href="https://clients.multiplymarket.com/">Log In</a></li>
+          <li><a href="https://clients.multiplymarket.com/register">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
