--- a/prizma/index.html
+++ b/prizma/index.html
@@ -105,8 +105,42 @@
         </div>
       </div>
     </div>
-    <div class="slider__box"></div>
-    <div class="slider__box"></div>
+    <div class="slider__box  slider__box--2">
+      <div class="slider__container">
+        <div class="slider__flex  slider__flex--small">
+          <div class="slider__text">
+            <b>New features, easy navigation<br>Account assets on the go</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
+          </div>
+          <div class="slider__social">
+            <ul>
+              <li><a class="slider__item  slider__item--fb" href="#"></a></li>
+              <li><a class="slider__item  slider__item--in" href="#"></a></li>
+              <li><a class="slider__item  slider__item--gp" href="#"></a></li>
+              <li><a class="slider__item  slider__item--tw" href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slider__box  slider__box--3">
+      <div class="slider__container">
+        <div class="slider__flex">
+          <div class="slider__text">
+            <b>Premium Trader Tools<br>Trading with added confidence</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
+          </div>
+          <div class="slider__social">
+            <ul>
+              <li><a class="slider__item  slider__item--fb" href="#"></a></li>
+              <li><a class="slider__item  slider__item--in" href="#"></a></li>
+              <li><a class="slider__item  slider__item--gp" href="#"></a></li>
+              <li><a class="slider__item  slider__item--tw" href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="step">
     <div class="container">
